# mre-dioxus

./: Cargo.toml
workspace1/: Cargo.toml
workspace1/src/: main.rs
